add standard response to ingredient handlers
