# docs/swagger.yaml
@@ -121,6 +121,36 @@ definitions:
       id:
         type: string
     type: object
+  responses.ResponseApi-array_domains_Ingredient:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/domains.Ingredient'
+        type: array
+      error:
+        type: string
+    type: object
+  responses.ResponseApi-domains_Ingredient:
+    properties:
+      data:
+        $ref: '#/definitions/domains.Ingredient'
+      error:
+        type: string
+    type: object
+  responses.ResponseApi-responses_ResponseAdd:
+    properties:
+      data:
+        $ref: '#/definitions/responses.ResponseAdd'
+      error:
+        type: string
+    type: object
+  responses.ResponseApi-responses_ResponseStatus:
+    properties:
+      data:
+        $ref: '#/definitions/responses.ResponseStatus'
+      error:
+        type: string
+    type: object
   responses.ResponseStatus:
     properties:
       status:
@@ -180,9 +210,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/domains.Ingredient'
-            type: array
+            $ref: '#/definitions/responses.ResponseApi-array_domains_Ingredient'
       security:
       - ApiKeyAuth: []
       summary: Get ingredients list
@@ -203,7 +231,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/responses.ResponseAdd'
+            $ref: '#/definitions/responses.ResponseApi-responses_ResponseAdd'
       security:
       - ApiKeyAuth: []
       summary: Create new ingredient
@@ -224,7 +252,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domains.Ingredient'
+            $ref: '#/definitions/responses.ResponseApi-domains_Ingredient'
       security:
       - ApiKeyAuth: []
       summary: Retrieve ingredient by id
@@ -250,7 +278,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/responses.ResponseStatus'
+            $ref: '#/definitions/responses.ResponseApi-responses_ResponseStatus'
       security:
       - ApiKeyAuth: []
       summary: Update ingredient
